Fix sidebar z-index
Also played with navbar, trying to get menu to close on redirect.

--- a/client/components/layouts/layout.css
+++ b/client/components/layouts/layout.css
@@ -90,13 +90,13 @@
 #right-bar{
 	position:absolute;
 	right: 0px;
-
+	z-index: 100;
 }
 
 #left-bar{
 	position: absolute;
 	left: 0px;
-
+	z-index: 100;
 }
 
 #main{
